--- a/Index.html
+++ b/Index.html
@@ -257,7 +257,7 @@
                 <div class="online">
                     <img src="./Socialbook_img/member-2.png" alt="">
                 </div>
-                <p>Olaoye Inioluwa</p>
+                <p>Festa Linux</p>
             </div>
             <div class="online-list">
                 <div class="online">
